--- a/configuration.properties
+++ b/configuration.properties
@@ -1,3 +1,4 @@
 browser=chrome
 etsyUrl=https://www.etsy.com
 wikiUrl=https://www.wikipedia.org
+libraryUrl=https://library2.cybertekschool.com/login.html
