--- a/configuration.properties
+++ b/configuration.properties
@@ -2,3 +2,5 @@ browser=chrome
 etsyUrl=https://www.etsy.com
 wikiUrl=https://www.wikipedia.org
 libraryUrl=https://library2.cybertekschool.com/login.html
+username=librarian
+password=password
